Add Map Fragment

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,7 +47,7 @@
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/victor_mono_bold_italic"
                 android:text="it's cold"
-                android:textColor="#80FFFFFF"
+                android:textColor="#FFFFFF"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lobester"
-                android:textColor="#80FFFFFF"
+                android:textColor="#FFFFFF"
                 android:text="399°"
                 android:textSize="64dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -126,7 +126,7 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="16dp"
                 android:text="San Fransisco"
-                android:textColor="#80FFFFFF"
+                android:textColor="#FFFFFF"
                 android:textColorHint="#010623"
                 android:textSize="25sp"
                 android:textStyle="bold"
